Ninja: Fix LINK_WHAT_YOU_USE link flag placement

Move `-Wl,--no-as-needed` from the `<FLAGS>` placeholder to
`<LINK_FLAGS>`, as it is in the Makefile generators.

Fixes: #22342